# action-style-guide

./: .gitignore  ARCHITECTURE-REVIEW.md  BUG-REPORT-PARSER-FORMAT-MISMATCH.md  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  MIGRATION-SUMMARY.md  PLAN.md  PROJECT_SUMMARY.md  README.md  RELEASE-GUIDE.md  RELEASE-NOTES-0.3.0.md  RELEASE_NOTES_v0.1.8.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  SETUP_COMPLETE.md  TECHNICAL-REVIEW.md  action.yml  generate_prompts.py  pyproject.toml  requirements.txt  style-guide-database.md  style-guide.yaml  test_migration.py  verify_setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
.reports/: README.md
docs/: ARCHITECTURE.md  FUTURE-ENHANCEMENTS.md  README.md  RULES.md  architecture.md  ci-cd-setup.md  github-app-setup.md  index.md  llm-integration-testing.md  markdown-format-migration.md  myst.yml  production-testing.md  quickstart.md  testing-extended-thinking.md  testing-quick-reference.md
docs/developer/: architecture.md  contributing.md  extended-thinking.md  roadmap.md  testing.md
docs/reports/: report-test-action-translation-sync-2026-02-12.md
docs/user/: cli-tutorial-output.md  cli-tutorial.md  cli.md  configuration.md  getting-started.md  github-app-setup.md  rules-reference.md
examples/: style-guide-comment.yml  style-guide-weekly.yml
style_checker/: __init__.py  action.py  categories.py  cli.py  fix_applier.py  github.py  github_handler.py  main.py  parser.py  parser_md.py  prompt_loader.py  reviewer.py
style_checker/prompts/: admonitions-prompt.md  admonitions.md  all.md  code-prompt.md  code.md  figures-prompt.md  figures.md  jax-prompt.md  jax.md  links-prompt.md  links.md  math-prompt.md  math.md  references-prompt.md  references.md  writing-prompt.md  writing.md
style_checker/prompts/v0.6.1/: admonitions-prompt.md  code-prompt.md  figures-prompt.md  jax-prompt.md  links-prompt.md  math-prompt.md  references-prompt.md  writing-prompt.md
style_checker/rules/: admonitions-rules.md  code-rules.md  figures-rules.md  jax-rules.md  links-rules.md  math-rules.md  references-rules.md  writing-rules.md
tests/: README.md  test_basic.py  test_cli.py  test_fix_applier.py  test_github_handler.py  test_llm_integration.py  test_markdown_parser.py  test_parser_md.py  test_parsing.py  test_prompt_loader.py  test_reviewer.py  test_semantic_grouping.py  verify_setup.py
tool-style-checker/: CHANGELOG.md  README.md  additive_functionals-corrected.md  additive_functionals-suggestions.md  analysis.md  claude-style-checker-prompt.md  quantecon-test-lecture-corrected.md  quantecon-test-lecture-suggestions.md  quantecon-test-lecture.md  style_checker.py
tool-style-checker/archive/: README.md  test_lecture.md  test_prompt.py
tool-style-checker/archive/old-docs/: ARCHITECTURE.md  CLEANUP-SUMMARY.md  FIRST-TIME-SETUP.md  QUICK-START.md  README.md  SUMMARY.md  example-interactions.md  usage-guide.md
tool-style-checker/archive/old-prompts/: friendly.md  math_only.md  strict.md
tool-style-checker/docs/: DOCUMENTATION.md  MODES-GUIDE.md
tool-style-checker/prompts/: admonitions-prompt.md  code-prompt.md  figures-prompt.md  links-prompt.md  math-prompt.md
tool-style-checker/rules/: admonitions-rules.md  code-rules.md  figures-rules.md  jax-rules.md
tool-style-guide-development/: README.md  build_rules.py  style-guide-database.md
