[project]
name = "qestyle"
version = "0.7.0"
description = "AI-powered style guide compliance checker for QuantEcon lecture materials"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "QuantEcon"},
]
keywords = ["quantecon", "style-guide", "linter", "myst-markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "anthropic>=0.18.0",
]

[project.scripts]
qestyle = "style_checker.cli:main"

[project.urls]
Homepage = "https://github.com/QuantEcon/action-style-guide"
Repository = "https://github.com/QuantEcon/action-style-guide"
Issues = "https://github.com/QuantEcon/action-style-guide/issues"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["style_checker*"]

[tool.setuptools.package-data]
style_checker = ["prompts/*.md", "prompts/**/*.md", "rules/*.md"]

[tool.pytest.ini_options]
# Pytest configuration

# Test discovery patterns
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Test paths
testpaths = ["tests"]

# Output options
addopts = [
    "-v",                    # Verbose output
    "--strict-markers",      # Error on unknown markers
    "-m", "not integration", # Skip LLM integration tests by default (run with: pytest -m integration)
    "--tb=short",           # Shorter traceback format
    "--cov=style_checker",  # Coverage for style_checker module
    "--cov-report=term-missing",  # Show missing lines in coverage
    "--cov-report=html",    # Generate HTML coverage report
]

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests that call real LLM APIs",
    "unit: marks tests as unit tests",
]

# Ignore patterns
norecursedirs = [
    ".git",
    ".github",
    "*.egg-info",
    "__pycache__",
    "docs",
    "examples",
]

[tool.coverage.run]
# Coverage configuration
source = ["style_checker"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
# Coverage reporting
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
