[project]
name = "qestyle"
dynamic = ["version"]
description = "AI-powered style guide compliance checker for QuantEcon lecture materials"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "QuantEcon"},
]
keywords = ["quantecon", "style-guide", "linter", "myst-markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
# Core runtime dependency — the qestyle CLI only needs the Anthropic SDK.
dependencies = [
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
# Extra dependencies needed by the GitHub Action entry point (action.py / github_handler.py)
# which talks to the GitHub API via PyGithub. The CLI does not need these.
action = [
    "PyGithub>=2.1.1",
]
# Dev/test tooling. Install with `uv sync --all-extras` or `pip install -e ".[dev]"`.
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff",
]

[project.scripts]
qestyle = "style_checker.cli:main"

[project.urls]
Homepage = "https://github.com/QuantEcon/action-style-guide"
Repository = "https://github.com/QuantEcon/action-style-guide"
Issues = "https://github.com/QuantEcon/action-style-guide/issues"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "style_checker.__version__"}

[tool.setuptools.packages.find]
include = ["style_checker*"]

[tool.setuptools.package-data]
style_checker = ["prompts/*.md", "prompts/**/*.md", "rules/*.md"]

[tool.pytest.ini_options]
# Pytest configuration

# Test discovery patterns
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Test paths
testpaths = ["tests"]

# Output options
addopts = [
    "-v",                    # Verbose output
    "--strict-markers",      # Error on unknown markers
    "-m", "not integration", # Skip LLM integration tests by default (run with: pytest -m integration)
    "--tb=short",           # Shorter traceback format
    "--cov=style_checker",  # Coverage for style_checker module
    "--cov-report=term-missing",  # Show missing lines in coverage
    "--cov-report=html",    # Generate HTML coverage report
]

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests that call real LLM APIs",
    "unit: marks tests as unit tests",
]

# Ignore patterns
norecursedirs = [
    ".git",
    ".github",
    "*.egg-info",
    "__pycache__",
    "docs",
    "examples",
]

[tool.coverage.run]
# Coverage configuration
source = ["style_checker"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
# Coverage reporting
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
